really use same common files in the www between ios and android

--- a/Catalog/www/common/cobalt.conf
+++ b/Catalog/www/common/cobalt.conf
@@ -2,57 +2,57 @@
 	"controllers": {
         "default": {
             "ios": "SimpleController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.SimpleHybridActivity"
+            "android": "fr.cobaltians.catalog.activities.SimpleHybridActivity"
         },
         "callbacks": {
             "ios": "CallbacksController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.CallbacksActivity"
+            "android": "fr.cobaltians.catalog.activities.CallbacksActivity"
         },
         "events": {
             "ios": "EventsController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.EventsActivity"
+            "android": "fr.cobaltians.catalog.activities.EventsActivity"
         },
         "infiniteScroll": {
             "ios": "SimpleController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.PullToRefreshActivity",
+            "android": "fr.cobaltians.catalog.activities.PullToRefreshActivity",
             "infiniteScroll": true
         } ,
         "infiniteScrollNonActive": {
             "ios": "SimpleController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.PullToRefreshActivity"
+            "android": "fr.cobaltians.catalog.activities.PullToRefreshActivity"
         },
         "modalTest": {
             "ios": "SimpleController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.ModalActivity"
+            "android": "fr.cobaltians.catalog.activities.ModalActivity"
         },
         "PTR_and_IfiniteScroll": {
             "ios": "SimpleController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.PullToRefreshActivity",
+            "android": "fr.cobaltians.catalog.activities.PullToRefreshActivity",
             "pullToRefresh": true,
             "infiniteScroll": true
         },
         "pullToRefresh":{
             "ios": "SimpleController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.PullToRefreshActivity",
+            "android": "fr.cobaltians.catalog.activities.PullToRefreshActivity",
             "pullToRefresh": true
         },
         "pullToRefreshCustom": {
             "ios": "CustomizedPulltoRefreshViewController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.PullToRefreshCustomActivity",
+            "android": "fr.cobaltians.catalog.activities.PullToRefreshCustomActivity",
             "pullToRefresh": true
         },
         "pullToRefreshNonActive": {
             "ios": "SimpleController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.PullToRefreshActivity"
+            "android": "fr.cobaltians.catalog.activities.PullToRefreshActivity"
         },
         "appEvents": {
             "ios": "SimpleController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.PullToRefreshActivity",
+            "android": "fr.cobaltians.catalog.activities.PullToRefreshActivity",
             "pullToRefresh": true
         },
         "plugins": {
             "ios": "PluginsController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.PluginsActivity",
+            "android": "fr.cobaltians.catalog.activities.PluginsActivity",
             "bars": {
                 "visibility": { "top": true, "bottom" : false },
                 "backgroundColor": "#34db98"
@@ -60,15 +60,15 @@
         },
         "nativeBars": {
             "ios": "SimpleController",
-            "android": "fr.cobaltians.cobaltcatalog.activities.NativeBarsActivity",
+            "android": "fr.cobaltians.catalog.activities.NativeBarsActivity",
             "bars": {
                 "visibility": { "top": true, "bottom" : true },
                 "backgroundColor": "#FF4444",
-                "androidIcon": "fr.cobaltians.cobaltcatalog:moon",
+                "androidIcon": "fr.cobaltians.catalog:moon",
                 "title": "page title",
                 "actions": [
                     {
-                        "androidIcon": "fr.cobaltians.cobaltcatalog:moon",
+                        "androidIcon": "fr.cobaltians.catalog:moon",
                         "iosIcon": "moon.png",
                         "name": "moon",
                         "title" : "Moon !",
@@ -76,7 +76,7 @@
                         "androidPosition": "top"
                     },
                     {
-                        "androidIcon": "fr.cobaltians.cobaltcatalog:sun",
+                        "androidIcon": "fr.cobaltians.catalog:sun",
                         "iosIcon": "sun.png",
                         "name": "sun",
                         "title" : "Sun !",
@@ -84,14 +84,14 @@
                         "androidPosition": "top"
                     },
                     {
-                        "androidIcon": "fr.cobaltians.cobaltcatalog:wind",
+                        "androidIcon": "fr.cobaltians.catalog:wind",
                         "name": "wind",
                         "title" : "Wind !",
                         "iosPosition": "topRight",
                         "androidPosition": "overflow"
                     },
                     {
-                        "androidIcon": "fr.cobaltians.cobaltcatalog:cloudy",
+                        "androidIcon": "fr.cobaltians.catalog:cloudy",
                         "iosIcon": "cloudy.png",
                         "name": "cloudy",
                         "title" : "Clouds are coming",
@@ -99,7 +99,7 @@
                         "androidPosition": "overflow"
                     },
                     {
-                        "androidIcon": "fr.cobaltians.cobaltcatalog:sun",
+                        "androidIcon": "fr.cobaltians.catalog:sun",
                         "iosIcon": "sun.png",
                         "name": "sun2",
                         "title" : "Sun !",
@@ -107,7 +107,7 @@
                         "androidPosition": "bottom"
                     },
                     {
-                        "androidIcon": "fr.cobaltians.cobaltcatalog:black_sun",
+                        "androidIcon": "fr.cobaltians.catalog:black_sun",
                         "iosIcon": "fa-bars",
                         "name": "black_sun",
                         "title" : "Sun !",
