--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = PubSubPlugin
 	url = git://github.com/Cobaltians-Plugins/Plugins-PubSub-iOS.git
 	branch = 0.4.1
+[submodule "Catalog/www/common"]
+	path = Catalog/www/common
+	url = git://github.com/Cobaltians-Samples/Samples-Catalog-Web.git
+	branch = 0.4.1
