--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,11 @@
 [submodule "Catalog/www/WebServicesPlugin"]
 	path = Catalog/www/WebServicesPlugin
 	url = git://github.com/cobaltians-plugins/plugins-Webservices-Web.git
+[submodule "Catalog/www/AppInfosPlugin"]
+	path = Catalog/www/AppInfosPlugin
+	url = git@github.com:Cobaltians-Plugins/Plugins-AppInfos-Web.git
+	branch = 0.4.1
+[submodule "AppInfosPlugin"]
+	path = AppInfosPlugin
+	url = git@github.com:Cobaltians-Plugins/Plugins-AppInfos-iOS.git
+	branch = 0.4.1
